feat: 서비스 및 Util 추가 (#40)