@@ -1,11 +1,14 @@
 package com.ssafy.trend_gaza.Image.service;
 
 import java.util.List;
+import java.util.stream.Collectors;
 
+import org.springframework.context.ApplicationEventPublisher;
 import org.springframework.stereotype.Service;
 import org.springframework.web.multipart.MultipartFile;
 
 import com.ssafy.trend_gaza.Image.domain.ImageFile;
+import com.ssafy.trend_gaza.Image.domain.S3ImageEvent;
 import com.ssafy.trend_gaza.Image.dto.ImagesResponse;
 import com.ssafy.trend_gaza.Image.exception.ImageException;
 import com.ssafy.trend_gaza.common.CustomExceptionStatus;
@@ -20,16 +23,18 @@ public class UploadService {
 	private static final int EMPTY_LIST_SIZE = 0;
 	
 	private final S3Service s3Service;
+	private final ApplicationEventPublisher publisher;
 	
-	public UploadService(S3Service s3Service) {
+	public UploadService(S3Service s3Service, ApplicationEventPublisher publisher) {
 		this.s3Service = s3Service;
+		this.publisher = publisher;
 	}
 	
 	public ImagesResponse save(final List<MultipartFile> images) {
 		validateSizeOfImages(images);
 		final List<ImageFile> imageFiles = images.stream()
 				.map(ImageFile::new)
-				.toList();
+				.collect(Collectors.toList());
 		final List<String> imageNames = uploadImages(imageFiles);
 		return new ImagesResponse(imageNames);
 	}
@@ -39,6 +44,7 @@ public class UploadService {
 			return s3Service.uploadImages(imageFiles);
 		} catch (final ImageException e) {
 			imageFiles.forEach(imageFile -> publisher.publishEvent(new S3ImageEvent(imageFile.getHashedName())));
+			throw e;
 		}
 	}
 	
